--- a/META.yml
+++ b/META.yml
@@ -1,8 +1,8 @@
 ---
 name: Term-TermKey
-version: 0.03
+version: 0.04
 author:
-  - 'Paul Evans E<lt>leonerd@leonerd.org.ukE<gt>'
+  - 'Paul Evans <leonerd@leonerd.org.uk>'
 abstract: 'perl wrapper around C<libtermkey>'
 license: perl
 resources:
@@ -16,8 +16,8 @@ build_requires:
 provides:
   Term::TermKey:
     file: lib/Term/TermKey.pm
-    version: 0.03
-generated_by: Module::Build version 0.280801
+    version: 0.04
+generated_by: Module::Build version 0.33
 meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.2.html
-  version: 1.2
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
