--- a/META.yml
+++ b/META.yml
@@ -1,23 +1,24 @@
 ---
 name: Term-TermKey
-version: 0.04
+version: 0.05
 author:
   - 'Paul Evans <leonerd@leonerd.org.uk>'
 abstract: 'perl wrapper around C<libtermkey>'
 license: perl
 resources:
   license: http://dev.perl.org/licenses/
-configure_requires:
-  ExtUtils::PkgConfig: 0
 build_requires:
   ExtUtils::PkgConfig: 0
   Module::Build: 0
   Module::Build::Compat: 0
+configure_requires:
+  ExtUtils::PkgConfig: 0
+  Module::Build: 0.35
 provides:
   Term::TermKey:
     file: lib/Term/TermKey.pm
-    version: 0.04
-generated_by: Module::Build version 0.33
+    version: 0.05
+generated_by: Module::Build version 0.35
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
