Import of PEVANS/Term-TermKey-0.07 from CPAN.
gitpan-cpan-distribution: Term-TermKey
gitpan-cpan-version:      0.07
gitpan-cpan-path:         PEVANS/Term-TermKey-0.07.tar.gz
gitpan-cpan-author:       PEVANS
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,9 @@
 ---
-name: Term-TermKey
-version: 0.06
+abstract: 'perl wrapper around C<libtermkey>'
 author:
   - 'Paul Evans <leonerd@leonerd.org.uk>'
-abstract: 'perl wrapper around C<libtermkey>'
-license: perl
-resources:
-  license: http://dev.perl.org/licenses/
 build_requires:
+  ExtUtils::CBuilder: 0
   ExtUtils::PkgConfig: 0
   Module::Build: 0
   Module::Build::Compat: 0
@@ -15,12 +11,17 @@ build_requires:
   Test::Refcount: 0
 configure_requires:
   ExtUtils::PkgConfig: 0
-  Module::Build: 0.35
-provides:
-  Term::TermKey:
-    file: lib/Term/TermKey.pm
-    version: 0.06
-generated_by: Module::Build version 0.35
+  Module::Build: 0.36
+generated_by: 'Module::Build version 0.3607'
+license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
+name: Term-TermKey
+provides:
+  Term::TermKey:
+    file: lib/Term/TermKey.pm
+    version: 0.07
+resources:
+  license: http://dev.perl.org/licenses/
+version: 0.07
