--- a/META.yml
+++ b/META.yml
@@ -10,9 +10,11 @@ build_requires:
   Test::More: 0
   Test::Refcount: 0
 configure_requires:
+  Exporter: 5.57
   ExtUtils::PkgConfig: 0
-  Module::Build: 0.36
-generated_by: 'Module::Build version 0.3607'
+  Module::Build: 0
+dynamic_config: 1
+generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.110930'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -21,7 +23,7 @@ name: Term-TermKey
 provides:
   Term::TermKey:
     file: lib/Term/TermKey.pm
-    version: 0.08
+    version: 0.09
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.08
+version: 0.09
