--- a/META.yml
+++ b/META.yml
@@ -10,6 +10,7 @@ build_requires:
   Test::More: 0
   Test::Refcount: 0
 configure_requires:
+  Alien::libtermkey: 0.13
   Exporter: 5.57
   ExtUtils::PkgConfig: 0
   Module::Build: 0
@@ -23,7 +24,7 @@ name: Term-TermKey
 provides:
   Term::TermKey:
     file: lib/Term/TermKey.pm
-    version: 0.15
+    version: 0.16
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.15
+version: 0.16
